# parsita

./: .coveragerc  .gitattributes  .gitignore  .python-version  .travis.yml  404.html  CNAME  LICENSE  README.md  README.rst  index.html  mkdocs.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  tox.ini
.github/workflows/: ci.yml  python.yml  release.yml
alternative_parsers/: index.html
contributing/: index.html
conversion_parsers/: index.html
docs/: alternative_parsers.md  contributing.md  conversion_parsers.md  getting_started.md  index.md  miscellaneous_parsers.md  repeated_parsers.md  sequential_parsers.md  terminal_parsers.md  utility_functions.md
examples/: expressions.py  json.py  positioned.py  url.py
getting_started/: index.html
miscellaneous_parsers/: index.html
parsita/: __init__.py  metaclasses.py  options.py  parsers.py  regex_parsers.py  state.py
repeated_parsers/: index.html
search/: search_index.json
sequential_parsers/: index.html
src/parsita/: __init__.py  exceptions.py  metaclasses.py  options.py  parsers.py  reader.py  result.py  state.py  util.py
src/parsita/parsers/: __init__.py  _alternative.py  _any.py  _base.py  _conversion.py  _debug.py  _end_of_source.py  _literal.py  _optional.py  _predicate.py  _regex.py  _repeated.py  _repeated_seperated.py  _sequential.py  _success.py  _until.py
src/parsita/state/: __init__.py  _exceptions.py  _reader.py  _result.py  _state.py
terminal_parsers/: index.html
tests/: __init__.py  test_basic.py  test_examples.py  test_metaclass_scopes.py  test_regex.py  test_state.py  test_ummm_stuff.py  test_util.py
utility_functions/: index.html
